--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<br>
 			<div class="container">
 				<div class="row no-margin-bottom">
-					<div class="col m4">
+					<div class="col s12 m4">
 						<div class="center-align">
 							<i class="material-icons icon-size">language</i>
 							<h2 class="h2">Idiomas</h2>
@@ -68,7 +68,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col m4">
+					<div class="col s12 m4">
 						<div class="center-align">
 							<i class="icon-size fa fa-code" aria-hidden="true"></i>
 
@@ -83,7 +83,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col m4">
+					<div class="col s12 m4">
 						<div class="center-align">
 							<i class="material-icons icon-size">computer</i>
 							<h2 class="h2">Sistemas Operacionais</h2>
@@ -100,13 +100,13 @@
 		<section id="portifolio" class="indigo section">
 			<h1 class="h1 h1-margin center-align">Portifolio</h1>
 			<div class="row no-margin-bottom">
-				<div class="col m4">
+				<div class="col s12 m4">
 					<div class="card">
 						<div class="card-image">
 							<img src="img/easy-e.jpg" alt="Pagina tributo">
 							<span class="card-title">Pagina Tributo</span>
 						</div>
-						<div class="card-content">
+						<div class="card-content grey deep-purple lighten-4">
 							<p>Pagina tributo ao rapper americano easy-e</p>
 							<br>
 							<p>Tecnologias utilizadas/frameworks: HTML , CSS , Bootstrap.</p>
@@ -116,7 +116,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col m4">
+				<div class="col s12 m4">
 					<div class="card">
 						<div class="card-image">
 							<img src="img/easy-e.jpg" alt="Segundo trabalho">
@@ -148,7 +148,7 @@
 			<h1 class="h1 h1-margin center-align">Contato</h1>
 			<div class="container">
 				<div class="row no-margin-bottom">
-					<div class="col m6">
+					<div class="col s12 m6">
 						<h2 class="h2 center-align">Informaçoes Pessoais</h2>
 						<address>
 							<ul>
@@ -158,7 +158,7 @@
 							</ul>
 						</address>
 					</div>
-					<div class="col m6">
+					<div class="col s12 m6">
 						<h2 class="h2 center-align">Redes Sociais</h2>
 						<ul>
 							<li><i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</li>
