--- a/index.html
+++ b/index.html
@@ -179,6 +179,6 @@
 		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="js/materialize.js"></script>
 		<script src="js/init.js"></script>
-		<script src='https://use.fontawesome.com/f062309338.js'></script>c
+		<script src='https://use.fontawesome.com/f062309338.js'></script>
 	</body>
 </html>
