--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <i class="material-icons">done</i>
 <i class="material-icons">check_circle</i>
 <i class="material-icons">http</i>
+
+Estrela cheia
+<i class="fa fa-star" aria-hidden="true"></i>
+Estrela vazia
+<i class="fa fa-star-o" aria-hidden="true"></i>
+Estrela metade
+<i class="fa fa-star-half-o" aria-hidden="true"></i>
 -->
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -23,13 +30,14 @@
 					<ul class="right hide-on-med-and-down">
 						<li><a href="#" class="font-navbar-links">Home</a></li>
 						<li><a href="#habilidades" class="font-navbar-links scroll">Habilidades</a></li>
-						<li><a href="#portifolio" class="font-navbar-links scroll">Portifolio</a></li>
+						<li><a href="#portifolio" class="font-navbar-links scroll">Portifólio</a></li>
 						<li><a href="#contato" class="font-navbar-links scroll">Contato</a></li>
 					</ul>
 					<ul id="nav-mobile" class="side-nav">
+						<h4 class="center-align">Menu</h4>
 						<li><a href="#">Home</a></li>
-						<li><a href="#habilidades">Habilidades</a></li>
-						<li><a href="#portifolio">Portifolio</a></li>
+						<li><a href="#habilidades" class="dectivate-menu">Habilidades</a></li>
+						<li><a href="#portifolio">Portifólio</a></li>
 						<li><a href="#contato">Contato</a></li>
 					</ul>
 				</div>
@@ -63,8 +71,8 @@
 							<i class="material-icons icon-size">language</i>
 							<h2 class="h2">Idiomas</h2>
 							<ul>
-								<li>Ingles</li>
-								<li>espanhol</li>
+								<li>Inglês</li>
+								<li>Espanhol</li>
 							</ul>
 						</div>
 					</div>
@@ -72,13 +80,13 @@
 						<div class="center-align">
 							<i class="icon-size fa fa-code" aria-hidden="true"></i>
 
-							<h2 class="h2">Programaçao</h2>
+							<h2 class="h2">Programação</h2>
 							<ul>
-								<li><i class="fa fa-html5" aria-hidden="true"></i>html5</li>
-								<li><i class="fa fa-css3" aria-hidden="true"></i>css3</li>
+								<li><i class="fa fa-html5" aria-hidden="true"></i>HTML5</li>
+								<li><i class="fa fa-css3" aria-hidden="true"></i>CSS3</li>
 								<li>javaScript</li>
 								<li>jQuery</li>
-								<li>php</li>
+								<li>PHP</li>
 								<li><i class="fa fa-wordpress" aria-hidden="true"></i>WordPress</li>
 							</ul>
 						</div>
@@ -98,13 +106,13 @@
 		</section>
 		<!--  Portifólio      -->
 		<section id="portifolio" class="indigo section">
-			<h1 class="h1 h1-margin center-align">Portifolio</h1>
+			<h1 class="h1 h1-margin center-align">Portifólio</h1>
 			<div class="row no-margin-bottom">
 				<div class="col s12 m4">
 					<div class="card">
 						<div class="card-image">
 							<img src="img/easy-e.jpg" alt="Pagina tributo">
-							<span class="card-title">Pagina Tributo</span>
+							<span class="card-title">Página Tributo</span>
 						</div>
 						<div class="card-content grey deep-purple lighten-4">
 							<p>Pagina tributo ao rapper americano easy-e</p>
@@ -149,12 +157,12 @@
 			<div class="container">
 				<div class="row no-margin-bottom">
 					<div class="col s12 m6">
-						<h2 class="h2 center-align">Informaçoes Pessoais</h2>
+						<h2 class="h2 center-align">Informaçãos Pessoais</h2>
 						<address>
 							<ul>
-								<li><i class="material-icons">email</i> Email : alvarocalsolari@gmail.com</li>
-								<li><i class="material-icons">call</i>Telefone : (11)9924-83522</li>
-								<li><i class="material-icons">location_on</i>Sao Paulo / SP</li>
+								<li><i class="material-icons">email</i>E-mail : alvarocalsolari@gmail.com</li>
+								<li><i class="material-icons">call</i>Tel : (11)9924-83522</li>
+								<li><i class="material-icons">location_on</i>São Paulo / SP</li>
 							</ul>
 						</address>
 					</div>
@@ -172,13 +180,13 @@
 		<!--  Footer  -->
 		<footer>
 			<div class="container black">
-				<p class="right">By Alvaro Calsolari<sup><i class="fa fa-copyright" aria-hidden="true"></i></sup></p>
+				<p class="right">By Álvaro Calsolari<sup><i class="fa fa-copyright" aria-hidden="true"></i></sup></p>
 			</div>
 		</footer>
 		<!--  Scripts  -->
-		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script src="js/jquery-3.2.1.js"></script>
 		<script src="js/materialize.js"></script>
 		<script src="js/init.js"></script>
-		<script src='https://use.fontawesome.com/f062309338.js'></script>
+		<script src='js/f062309338.js'></script>
 	</body>
 </html>
