--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Estrela metade
 			<div class="container">
 				<div class="row no-margin-bottom">
 					<div class="col s12 m6">
-						<h2 class="h2 center-align">Informaçãos Pessoais</h2>
+						<h2 class="h2 center-align">Informações Pessoais</h2>
 						<address>
 							<ul>
 								<li><i class="material-icons">email</i>E-mail : alvarocalsolari@gmail.com</li>
