--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!--      To use later 
+<!--      To use later
 <i class="material-icons">done</i>
 <i class="material-icons">check_circle</i>
 <i class="material-icons">http</i>
-
 Estrela cheia
 <i class="fa fa-star" aria-hidden="true"></i>
 Estrela vazia
@@ -22,35 +21,37 @@ Estrela metade
 	</head>
 	<body class="hidden">
 		<!--  Barra de navegação  -->
-		<nav class="grey lighten-4 z-depth-2">
-			<div class="container">
-				<div class="nav-wrapper">
-					<a id="logo-container" href="#" class="brand-logo font-navbar-brand truncate">Meu Portifólio</a>
-					<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-					<ul class="right hide-on-med-and-down">
-						<li><a href="#" class="font-navbar-links">Home</a></li>
-						<li><a href="#habilidades" class="font-navbar-links scroll">Habilidades</a></li>
-						<li><a href="#portifolio" class="font-navbar-links scroll">Portifólio</a></li>
-						<li><a href="#contato" class="font-navbar-links scroll">Contato</a></li>
-					</ul>
-					<ul id="nav-mobile" class="side-nav">
-						<h4 class="center-align">Menu</h4>
-						<li><a href="#">Home</a></li>
-						<li><a href="#habilidades" class="dectivate-menu">Habilidades</a></li>
-						<li><a href="#portifolio">Portifólio</a></li>
-						<li><a href="#contato">Contato</a></li>
-					</ul>
+		<div class="navbar-fixed">
+			
+			<nav class="grey lighten-4 z-depth-2">
+				<div class="container">
+					<div class="nav-wrapper">
+						<a id="logo-container" href="#" class="brand-logo font-navbar-brand truncate">Meu Portifólio</a>
+						<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+						<ul class="right hide-on-med-and-down">
+							<li><a href="#" class="font-navbar-links">Home</a></li>
+							<li><a href="#habilidades" class="font-navbar-links scroll">Habilidades</a></li>
+							<li><a href="#portifolio" class="font-navbar-links scroll">Portifólio</a></li>
+							<li><a href="#contato" class="font-navbar-links scroll">Contato</a></li>
+						</ul>
+						<ul id="nav-mobile" class="side-nav">
+							<h4 class="center-align">Menu</h4>
+							<li><a href="#">Home</a></li>
+							<li><a href="#habilidades" class="dectivate-menu">Habilidades</a></li>
+							<li><a href="#portifolio">Portifólio</a></li>
+							<li><a href="#contato">Contato</a></li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
+			</nav>
+		</div>
 		<!--  Apresentação  -->
-		<header class="indigo">
+		<section class="indigo">
 			<div class="container no-margin-bottom">
 				<div class="fixed-image-top center-align">
 					<img src="img/minha-imagem.jpg" class="circle responsive-img hoverable" width="160" height="160">
 				</div>
 				<h1 class="center-align title-name">Álvaro Calsolari</h1>
-
 				<ul class="slides lime accent-1">
 					<li class="slide" style="display: inline-block;">Programação Web</li>
 					<li class="slide">Phothoshop</li>
@@ -58,8 +59,8 @@ Estrela metade
 					<li class="slide">Windows</li>
 				</ul>
 			</div>
-		</header>
-		<!--  Habilidades      --> 
+		</section>
+		<!--  Habilidades      -->
 		<section id="habilidades" class="indigo lighten-1">
 			<br>
 			<h1 class="center-align h1 h1-margin">Habilidades</h1>
@@ -79,7 +80,6 @@ Estrela metade
 					<div class="col s12 m4">
 						<div class="center-align">
 							<i class="icon-size fa fa-code" aria-hidden="true"></i>
-
 							<h2 class="h2">Programação</h2>
 							<ul>
 								<li><i class="fa fa-html5" aria-hidden="true"></i>HTML5</li>
@@ -101,7 +101,7 @@ Estrela metade
 							</ul>
 						</div>
 					</div>
-				</div>				
+				</div>
 			</div>
 		</section>
 		<!--  Portifólio      -->
@@ -124,31 +124,30 @@ Estrela metade
 						</div>
 					</div>
 				</div>
-				<div class="col s12 m4">
+				<!-- 				<div class="col s12 m4">
+						<div class="card">
+								<div class="card-image">
+										<img src="img/easy-e.jpg" alt="Segundo trabalho">
+										<span class="card-title">Segundo trabalho</span>
+								</div>
+								<div class="card-content">
+										<p>Lorem ipsum dolor sit amet, laudem putent per at. Nam id laudem iuvaret efficiantur</p>
+								</div>
+								<div class="card-action">
+										<a href="#">Link 2!</a>
+								</div>
+						</div>
+				</div>
+				-->				<!--
+				<div class="col s4">
 					<div class="card">
 						<div class="card-image">
-							<img src="img/easy-e.jpg" alt="Segundo trabalho">
-							<span class="card-title">Segundo trabalho</span>
-						</div>
-						<div class="card-content">
-							<p>Lorem ipsum dolor sit amet, laudem putent per at. Nam id laudem iuvaret efficiantur</p>
-						</div>
-						<div class="card-action">
-							<a href="#">Link 2!</a>
+							<img src="#" alt="Image 3">
+							<span class="card-title">Imagem 3</span>
 						</div>
 					</div>
 				</div>
-				<!--
-<div class="col s4">
-<div class="card">
-<div class="card-image">
-<img src="#" alt="Image 3">
-<span class="card-title">Imagem 3</span>
-</div>
-</div>
-</div>
--->
-
+				-->
 			</div>
 		</section>
 		<!--  Contato      -->
