--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@ Estrela metade
 							<li><a href="#portifolio" class="font-navbar-links scroll">Portifólio</a></li>
 							<li><a href="#contato" class="font-navbar-links scroll">Contato</a></li>
 						</ul>
+					</div>
+				</div>
+			</nav>
+		</div>
+<!-- 		<nav class="grey lighten-4 z-depth-2">
+				<div class="container">
+					<div class="nav-wrapper"> -->
 						<ul id="nav-mobile" class="side-nav">
 							<h4 class="center-align">Menu</h4>
 							<li><a href="#">Home</a></li>
@@ -40,10 +47,9 @@ Estrela metade
 							<li><a href="#portifolio">Portifólio</a></li>
 							<li><a href="#contato">Contato</a></li>
 						</ul>
-					</div>
+<!-- 					</div>
 				</div>
-			</nav>
-		</div>
+			</nav> -->
 		<!--  Apresentação  -->
 		<section id="home" class="parallax-container valign-wrapper">
 			<div class="container no-margin-bottom">
