--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Estrela metade
 				<div class="container">
 					<div class="nav-wrapper">
 						<a id="logo-container" href="#home" class="brand-logo font-navbar-brand truncate scroll">Meu Portifólio</a>
-						<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="fa fa-bars " aria-hidden="true"></i></a>
+						<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="fa fa-bars material-icons" aria-hidden="true"></i></a>
 						<ul class="right hide-on-med-and-down">
 							<li><a href="#home" class="font-navbar-links scroll">Home</a></li>
 							<li><a href="#habilidades" class="font-navbar-links scroll">Habilidades</a></li>
@@ -41,10 +41,10 @@ Estrela metade
 		</div>
 		<ul id="nav-mobile" class="side-nav">
 			<h4 class="center-align">Menu</h4>
-			<li><a href="#">Home</a></li>
-			<li><a href="#habilidades" class="dectivate-menu">Habilidades</a></li>
-			<li><a href="#portifolio">Portifólio</a></li>
-			<li><a href="#contato">Contato</a></li>
+			<li><a href="#" class="scroll">Home</a></li>
+			<li><a href="#habilidades" class="scroll">Habilidades</a></li>
+			<li><a href="#portifolio" class="scroll">Portifólio</a></li>
+			<li><a href="#contato" class="scroll">Contato</a></li>
 		</ul>
 		<!-- 		<nav class="grey lighten-4 z-depth-2">
 				<div class="container">
@@ -109,7 +109,7 @@ Estrela metade
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row no-margin-bottom">
 				<div class="col s12 m6">
 					<div class="center-align">
 						
