--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ Estrela metade
 			<nav class="grey lighten-4 z-depth-2">
 				<div class="container">
 					<div class="nav-wrapper">
-						<a id="logo-container" href="#home" class="brand-logo font-navbar-brand truncate scroll">Meu Portifólio</a>
+						<a id="logo-container" href="#home" class="brand-logo font-navbar-brand truncate scroll">Meu Portfólio</a>
 						<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="fa fa-bars material-icons" aria-hidden="true"></i></a>
 						<ul class="right hide-on-med-and-down">
 							<li><a href="#home" class="font-navbar-links scroll">Home</a></li>
 							<li><a href="#habilidades" class="font-navbar-links scroll">Habilidades</a></li>
-							<li><a href="#portifolio" class="font-navbar-links scroll">Portifólio</a></li>
+							<li><a href="#portfolio" class="font-navbar-links scroll">Portfólio</a></li>
 							<li><a href="#contato" class="font-navbar-links scroll">Contato</a></li>
 						</ul>
 					</div>
@@ -43,7 +43,7 @@ Estrela metade
 			<h4 class="center-align">Menu</h4>
 			<li><a href="#" class="scroll">Home</a></li>
 			<li><a href="#habilidades" class="scroll">Habilidades</a></li>
-			<li><a href="#portifolio" class="scroll">Portifólio</a></li>
+			<li><a href="#portfolio" class="scroll">Portfólio</a></li>
 			<li><a href="#contato" class="scroll">Contato</a></li>
 		</ul>
 		<!-- 		<nav class="grey lighten-4 z-depth-2">
@@ -118,8 +118,8 @@ Estrela metade
 			</div>
 		</div>
 	</section>
-	<!--  Portifólio      -->
-	<section id="portifolio" class="parallax-container">
+	<!--  Portfólio      -->
+	<section id="portfolio" class="parallax-container">
 		<h1 class="h1 h1-margin h1-highlight center-align">Trabalhos Completos</h1>
 		<div class="container">
 			
@@ -142,7 +142,7 @@ Estrela metade
 							</div>
 						</div>
 					</div>
-					<div class="parallax"><img src="img/home-office3.jpg" alt="portifólio"></div>
+					<div class="parallax"><img src="img/home-office3.jpg" alt="portfolio"></div>
 				</div>
 			</div>
 		</div>
