--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Estrela metade
 		<section id="home" class="parallax-container valign-wrapper">
 			<div class="container no-margin-bottom">
 				<div class="fixed-image-top center-align">
-					<img src="img/minha-imagem.jpg" class="circle responsive-img hoverable" width="175" height="175">
+					<img src="img/minha-imagem.jpeg" class="circle responsive-img hoverable" width="175" height="175">
 				</div>
 				<h1 class="center-align title-name">Álvaro Calsolari</h1>
 				<ul class="slides lime accent-1">
