--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ Estrela metade
 						
 						<h2 class="h2">Redes Sociais</h2>
 						<ul>
-							<li><i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</li>
-							<li><i class="fa fa-github" aria-hidden="true"></i>Github</li>
-							<li><i class="fa fa-linkedin" aria-hidden="true"></i>Linkedin</li>
+							<li><a href="https://www.facebook.com/alvaro.jacob.1272" class="material-icons"><i class="fa fa-facebook-official material-icons" aria-hidden="true"></i>Facebook</a></li>
+							<li><a href="https://github.com/AlvaroCalsolari" class="material-icons"><i class="fa fa-github material-icons" aria-hidden="true"></i>Github</a></li>
+							<li><a href="https://www.linkedin.com/in/%C3%A1lvaro-calsolari-de-souza-9b409a140/" class="material-icons"><i class="fa fa-linkedin material-icons" aria-hidden="true"></i>Linkedin</a></li>
 						</ul>
 					</div>
 				</div>
