--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ Estrela metade
 				</div>
 				<h1 class="center-align title-name">Álvaro Calsolari</h1>
 				<ul class="slides lime accent-1">
-					<li class="slide" style="display: inline-block;">Programação Web</li>
-					<li class="slide">Phothoshop</li>
-					<li class="slide">WordPress</li>
-					<li class="slide">Windows</li>
+					<li class="slide" style="display: inline-block;">Desenvolvedor Web</li>
+					<li class="slide">HTML5</li>
+					<li class="slide">CSS3</li>
+					<li class="slide">Bootstrap</li>
 				</ul>
 			</div>
 			<div class="parallax"><img src="img/home-office4.jpg"></div>
